[package]
name = "walletfetch"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"]}
futures = "0.3"
toml = "0.8"
dirs = "5.0"
indicatif = "0.17"
colored = "2.0"
