[package]
name = "walletfetch"
description = "Like Neofetch, but for your wallet"
homepage = "https://github.com/stevedylandev/walletfetch"
repository = "https://github.com/stevedylandev/walletfetch"
readme = "README.md"
version = "0.0.7"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"]}
futures = "0.3"
toml = "0.8"
dirs = "5.0"
indicatif = "0.17"
colored = "2.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"]}
unicode-normalization = "0.1.24"
hex = "0.4.3"

# Alloy dependencies
alloy = { version = "0.1", features = ["provider-http"] }
alloy-ccip-read = "0.1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
